# switchbot-dashboard

./: .gitignore  README.md  docker-compose.yaml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml
switchbot-logger/: Dockerfile  README.md  pyproject.toml
switchbot-logger/conf/: default.yaml
switchbot-logger/switchbot_logger/: logger.py  sensor.py
